<resources>
    <string name="app_name">Ad Blocker VPN</string>
    <string name="start_vpn">Start VPN</string>
    <string name="stop_vpn">Stop VPN</string>
    <string name="vpn_connected">VPN Connected</string>
    <string name="vpn_disconnected">VPN Disconnected</string>
    <string name="ads_blocked">Ads Blocked</string>
    <string name="vpn_permission_required">VPN Permission Required</string>
    <string name="vpn_permission_message">This app needs VPN permission to block ads</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Test Connection</string>
    <string name="whitelist">Whitelist</string>
    <string name="blocklist">Blocklist</string>
    <string name="status">Status</string>
    <string name="connected_time">Connected Time</string>
    <string name="total_ads_blocked">Total Ads Blocked</string>
</resources> 